add content from old wiki

--- a/SDL_MouseButtonEvent.mediawiki
+++ b/SDL_MouseButtonEvent.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_MouseButtonEvent =
-A structure that contains mouse button event ,,structure,, ^information^ (event.button.*).
+A structure that contains mouse button event ,,structure,, ^information^ ,,(event.button.*),,.
 
 
 == Data Fields ==
@@ -43,7 +43,16 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*[[SDL_MouseButtonEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_MOUSEBUTTONDOWN or SDL_MOUSEBUTTONUP is reported.
+
+When a mouse button press or release is detected the number of the button pressed (from 1 to 255, with 1 usually being the left button and 2 the right) is placed into '''button''', the position of the mouse when this event occured is stored in the '''x''' and the '''y'''  fields. ,,Like [[SDL_KeyboardEvent]], ,,information on whether the event was a press or a release event is stored in both the '''type''' and '''state''' fields, ,,but this should be obvious,,.
+
+Mouse wheel events are reported as buttons 4 (up) and 5 (down). Two events are generated i.e. you get an SDL_MOUSEBUTTONDOWN followed by an SDL_MOUSEBUTTONUP event.*
+<<Color2(green,Should it read 4 (forward) and 5 (backward) instead of up and down or is a mouse wheel event a click on the wheel like a center button instead of a roll action?)>>
+
+== Related Structures ==
+:[[SDL_MouseMotionEvent]] *???
+:[[SDL_MouseWheelEvent]] ???
 
 == Related Functions ==
 
