add content from old wiki

--- a/SDL_PollEvent.mediawiki
+++ b/SDL_PollEvent.mediawiki
@@ -14,12 +14,11 @@ int SDL_PollEvent(SDL_Event* event)
 == Function Parameters ==
 {|
 |'''event'''
-|If not NULL, the next event is removed from the queue and stored in that area ,,'''event''',,.
+|,,if not NULL, the next event is removed from the queue and stored in that area,, ''-or-'' ^NULL, or^??? ^a pointer to the [[SDL_Event]] structure to store the next event^
 |}
-<<Color2(green,Prior to header updates this said "in event" but now reads "in that area" which matches a few other functions w/ the same parameter.)>>
 
 == Return Value ==
-Returns 1 if there are any pending events, or 0 if there are none available; call [[SDL_GetError]]() for more information.  <<Color2(green,The previous author did not include any provision for an error RV. Can this function produce an error or only 0?  Would you still call the error function?)>>
+Returns 1 if there are any pending events, or 0 if there are none available; call [[SDL_GetError]]() for more information.  <<Color2(green,Can this function produce an error or only 0?  Would you still call the error function?)>>
 
 == Code Examples ==
 ```c++
@@ -31,9 +30,36 @@ while(1){
     // do some other stuff here -- draw your app, play your music, perform other operations...
 }
 ```
+*
+```
+SDL_Event event; /* Event structure */
+
+.
+.
+.
+/* Check for events */
+while(SDL_PollEvent(&event)) {  /* Loop until there are no events left on the queue */
+  switch(event.type) { /* Process the appropriate event type */
+    case SDL_KEYDOWN:  /* Handle a KEYDOWN event */
+      printf("Oh! Key press\n");
+      break;
+    case SDL_MOUSEMOTION:
+      .
+      .
+      .
+    default: /* Report an unhandled event */
+      printf("I don't know what this event is!\n");
+  }
+}
+```
+*
 
 == Remarks ==
-[[SDL_PollEvent]] is the favored way of receiving system events since it can be done from the main loop and does not suspend the main loop while waiting on an event to be posted.
+*If '''event''' is not NULL, the next event is removed from the queue and stored in the [[SDL_Event]] structure pointed to by '''event'''.
+
+As this function implicitly calls [[SDL_PumpEvents]](), you can only call this function in the thread that set the video mode. *  <<Color2(green,Is this true in 1.3?)>>
+
+[[SDL_PollEvent]]() is the favored way of receiving system events since it can be done from the main loop and does not suspend the main loop while waiting on an event to be posted.
 
 == Related Functions ==
 :[[SDL_GetEventFilter]]
