--- a/SDL_EventState.mediawiki
+++ b/SDL_EventState.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_EventState =
-Use this function to set the state of processing certain events.
+Use this function to set the state of processing ,,certain,, events ^by '''type'''^.
 
 
 == Syntax ==
@@ -15,16 +15,16 @@ Uint8 SDL_EventState(Uint8 type,
 == Function Parameters ==
 {|
 |'''type'''
-|^the type of event to be processed^
+|^the type of event to be processed / regulated???; see [[SDL_Event]] for details^
 |-
 |'''state'''
-|^the state by which to process the event^; see [[#Remarks|Remarks]] for details
+|^how to process the event '''type'''^; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
-<<Color2(green,Not sure if this is correct. Suspect it is not.  Not sure what Uint8 RVs look like.)>>
+<<Color2(green,These RVs are a total guess...)>>
 
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns an 8-bit bitmask of the current processing '''state''' (see [[#Remarks|Remarks]]), 1 if the event is processed successfully, 0 if it is ignored or disabled, or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -36,26 +36,30 @@ You can add your code example here
 {|
 |SDL_QUERY
 |-1
-|,,[[SDL_EventState]]() will,, return^s^ the current processing state of the specified event
+|returns the current processing state of the specified event '''type'''
 |-
 |SDL_IGNORE
 |0
-|the event will automatically be dropped from the event queue and will not be filtered
+|the event '''type''' will automatically be dropped from the event queue and will not be filtered
 |-
 |SDL_DISABLE
 |0
-|^same as SDL_IGNORE^ ???
+|^same as SDL_IGNORE^ ???  ^the event '''type''' will not be processed^ ???
 |-
 |SDL_ENABLE
 |1
-|the event will be processed normally
+|the event '''type''' will be processed normally
 |}
+<<Color2(green,Are the #s above the RVs or should they be removed?  The current header does not specify the word "type" but it seems relevant.  Should it remain or be removed above?)>>
 
-<<Color2(green,Below is the verbatim language from the header. Thought it might be better in table form above???)>>
+<<Color2(green,Below is the verbatim language from the header. Thought it might be better in table form above...)>>
 
 If state is set to SDL_IGNORE, that event will be automatically dropped from the event queue and will not event be filtered.<br/>
-If state is set to ::SDL_ENABLE, that event will be processed normally.<br/>
-If state is set to ::SDL_QUERY, [[SDL_EventState]]() will return the current processing state of the specified event.
+If state is set to SDL_ENABLE, that event will be processed normally.<br/>
+If state is set to SDL_QUERY, [[SDL_EventState]]() will return the current processing state of the specified event.
+
+<<Color2(green,Does the following still apply in 1.3?  SDL_VideoInfo seems to be a read-only struct.  Should it have a page?)>><br/>
+[[SDL_EventState]]() must be called following the [[SDL_VideoInfo]] call. Otherwise the back-end data structure will be erased.
 
 == Related Functions ==
 
