--- a/SDL_WaitEvent.mediawiki
+++ b/SDL_WaitEvent.mediawiki
@@ -14,9 +14,8 @@ int SDL_WaitEvent(SDL_Event* event)
 == Function Parameters ==
 {|
 |'''event'''
-|if not NULL, the next event is removed from the queue and stored in that area 
+|if not NULL, the next event is removed from the queue and stored in that area ''-or-'' ^a pointer to the location / [[SDL_Event]] to store the next event from the queue, or NULL^
 |}
-<<Color2(green, SDL_Poll<code></code>Event said 'stored in event' from another author. Is that more accurate?)>>
 
 == Return Value ==
 Returns 1, or 0 if there was an error while waiting for events; call [[SDL_GetError]]() for more information.
@@ -29,7 +28,11 @@ You can add your code example here
 == Remarks ==
 ''You can add useful comments here''
 
+<<Color2(green,Is this true in 1.3?)>>
+*As this function implicitly calls [[SDL_PumpEvents]](), you can only call this function in the thread that set the video mode. *  
+
 == Related Functions ==
+:[[SDL_PollEvent]] *???
 :[[SDL_WaitEventTimeout]]???
 
 ----
