--- a/SDL_WaitEventTimeout.mediawiki
+++ b/SDL_WaitEventTimeout.mediawiki
@@ -15,7 +15,7 @@ int SDL_WaitEventTimeout(SDL_Event* event,
 == Function Parameters ==
 {|
 |'''event'''
-|if not NULL, the next event is removed from the queue and stored in that area ,,'''event''',,
+|,,if not NULL, the next event is removed from the queue and stored in that area,, ''-or-'' ^a pointer to the location / [[SDL_Event]] to store the next event from the queue, or NULL^
 |-
 |'''timeout'''
 |^the number of milliseconds to wait for the next available event^
@@ -33,6 +33,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_PollEvent]] ???
 :[[SDL_WaitEvent]] ???
 
 ----
