--- a/SDL_RWseek.mediawiki
+++ b/SDL_RWseek.mediawiki
@@ -3,41 +3,39 @@
 '''DRAFT'''
 
 = SDL_RWseek =
-Use this function ^(macro)^ to *call the seek function pointer in an SDL_RWops structure*.
+Use this function to seek within an SDL_RWops data source.
 
 
 == Syntax ==
 ```c++
-SDL_RWseek(ctx, offset, whence)
+long SDL_RWseek(SDL_RWops* context,
+                long       offset, 
+                int        whence)
 ```
-
-<<Color2(green,Should there be anything to indicate a RV at the beginning of the syntax?  Should the 3 params be on separate lines like a regular function even though the rest of the syntax is different?  Should the following be included in the syntax section?)>>
- ```(ctx)->seek(ctx, offset, whence)```
 
 == Function Parameters ==
 {|
-|'''ctx'''
-|*a pointer to an SDL_RWops structure* <<Color2(green,why isn't there a pointer symbol?)>>
+|'''context'''
+|a pointer to an SDL_RWops structure
 |-
 |'''offset'''
-|*an offset in bytes^, relative to '''whence''' location^; can be negative*
+|an offset in bytes, relative to '''whence''' location; can be negative
 |-
 |'''whence'''
 |any of RW_SEEK_SET, RW_SEEK_CUR, RW_SEEK_END; see [[#whence|Remarks]] for details
 |}
 
 == Return Value ==
-Returns the final offset in the data source. ???
+Returns the final offset in the data source.
 
 == Code Examples ==
-*
 ```c++
 #include <stdio.h>
 #include "SDL_rwops.h"
 
 int main()
 {
-  int length;
+  long length;
   SDL_RWops *rw=SDL_RWFromFile("myfile.bin","rb");
   if(rw==NULL)
   {
@@ -58,35 +56,27 @@ int main()
   return(0);
 }
 ```
-*
 
 == Remarks ==
-*,,Note: ,,This is not a predefined function, just a macro that calls whatever seek function has been placed in the SDL_RWops structure.*
+This is not a predefined function, just a macro that calls whatever seek function has been placed in the SDL_RWops structure.
 
 <span id="whence"></span>'''whence''' may be any of the following values:
 {|
 |RW_SEEK_SET
-|0
 |seek from the beginning of data
 |-
 |RW_SEEK_CUR
-|1
 |seek relative to current read point
 |-
 |RW_SEEK_END
-|2
 |seek relative to the end of data
 |}
 
-<<Color2(green,What does the number in the center column represent?  Thought it was the value you'd put in the macro but the code example suggests otherwise.  Is that one of those things that we're leaving out?)>>
-
 == Related Functions ==
-:[[SDL_RWclose]] (Macro) *???
-:[[SDL_RWread]] (Macro) *???
-:[[SDL_RWtell]] (Macro) ???
-:[[SDL_RWwrite]] (Macro) *???
-
-<<Color2(green,Should the current read and write functions (not macros) be listed?)>>
+:[[SDL_RWclose]]
+:[[SDL_RWread]] 
+:[[SDL_RWtell]]
+:[[SDL_RWwrite]]
 
 ----
 [[CategoryAPI]], [[CategoryIO]]
