update content (w/ Sam); remove 'draft' note

--- a/SDL_WasInit.mediawiki
+++ b/SDL_WasInit.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_WasInit =
-Use this function to return ^a^ mask of the specified subsystems which have ^previously^ been initialized.
+Use this function to return a mask of the specified subsystems which have previously been initialized.
 
 
 == Syntax ==
@@ -18,7 +18,7 @@ Uint32 SDL_WasInit(Uint32 flags)
 |}
 
 == Return Value ==
-If flags is 0, it returns a mask of all initialized subsystems.  <<Color2(green,Otherwise it returns the initialization status of the specified subsystems. ?????)>>
+If flags is 0 it returns a mask of all initialized subsystems, otherwise it returns the initialization status of the specified subsystems.
 
 == Code Examples ==
 ```c++
@@ -28,8 +28,6 @@ You can add your code example here
 == Remarks ==
 <span id="flags"></span>These are the flags which may be passed to [[SDL_WasInit]]() and may be OR'd together to query multiple, specific subsystems simultaneously. 
 <<Include(SDL_Init, , , from="OR'd together.", to="== Return Value ==")>>
-
-''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_Init]]
