--- a/SDL_ClearError.mediawiki
+++ b/SDL_ClearError.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_ClearError =
-Use this function to clear any previous errors.
+Use this function to clear any previous error message.
 
 
 == Syntax ==
@@ -20,7 +19,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_GetError]] ???
+:[[SDL_GetError]]
 
 ----
 [[CategoryAPI]], [[CategoryError]]
