--- a/SDL_GetError.mediawiki
+++ b/SDL_GetError.mediawiki
@@ -12,7 +12,7 @@ char* SDL_GetError(void)
 ```
 
 == Return Value ==
-A pointer to (a enum? filled with) information about the specific error that occurred.
+Returns a message filled with information about the specific error that occurred, or an empty string if there hasn't been an error since the last call to [[SDL_ClearError]]().
 
 == Code Examples ==
 ```c++
@@ -23,7 +23,7 @@ You can add your code example here
 It is possible for multiple errors to occur before calling [[SDL_GetError]]().  Only the last error is returned.
 
 == Related Functions ==
-:[[SDL_ClearError]] ???
+:[[SDL_ClearError]]
 
 ----
 [[CategoryAPI]], [[CategoryError]]
