--- a/CategoryVersion.mediawiki
+++ b/CategoryVersion.mediawiki
@@ -21,16 +21,16 @@ These functions are used to collect or display information about the version of 
 * Z = '''Patchlevel''', which increments with fixes to the minor revision<br/>
  ''Example:'' The current version is 1.3.0
 
-{i} There are four (4) macros ''(<<Color2(green,Need to create a link to a resource that introduces macros.)>>)'' that apply to this header.
+Here are macros ''(<<Color2(green,Need to create a link to a resource that introduces macros.)>>)'' that are useful in dealing with version information.
 
 * [[SDL_VERSION]]
 * This macro gathers information from SDL_MAJOR_VERSION, SDL_MINOR_VERSION, AND SDL_PATCHLEVEL (#defines) and fills the structure [[SDL_version]] with that information.
 * [[SDL_version#Related_Minor_Macros|SDL_VERSIONNUM]]
-* A minor macro that converts version numbers into a numeric value.
+* A macro that converts version numbers into a numeric value.
 * [[SDL_version#Related_Minor_Macros|SDL_COMPILEDVERSION]]
-* A minor macro that produces the current SDL version number (major.minor.patchlevel)
+* A macro that produces the current SDL version number (major.minor.patchlevel)
 * [[SDL_version#Related_Minor_Macros|SDL_VERSION_ATLEAST]]
-* A minor macro that confirms whether a program was compiled with a version no older than the specified version.
+* A macro that confirms whether a program was compiled with a version no older than the specified version.
 
 == Functions ==
 
