--- a/SDL_GetRevision.mediawiki
+++ b/SDL_GetRevision.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GetRevision =
 Use this function to get the code revision of SDL that is linked against your program.
@@ -23,6 +22,7 @@ You can add your code example here
 This value is only useful in comparing against other revisions, it is NOT an incrementing number.
 
 == Related Functions ==
+:[[SDL_GetVersion]]
 
 ----
 [[CategoryAPI]], [[CategoryVersion]]
