--- a/SDL_GetVersion.mediawiki
+++ b/SDL_GetVersion.mediawiki
@@ -31,9 +31,7 @@ printf("But we linked against SDL version %d.%d.%d.\n",
 ```
 
 == Remarks ==
-If you are linking to SDL dynamically, then it is possible that it will be different than the version you compiled against.
-
-This is a real function; the macro SDL_VERSION() tells you what version of SDL you compiled against.  If you are dynamically linking to SDL the return value of the two may be different.
+If you are linking to SDL dynamically, then it is possible that the current version will be different than the version you compiled against.  This function returns the current version.  [[SDL_VERSION]]() is a macro that tells you what version of SDL you compiled against.  If you are dynamically linking to SDL the return value of the two may be different.
 
 This function may be called safely at any time, even before [[SDL_Init]]().
 
