--- a/SDL_VERSION.mediawiki
+++ b/SDL_VERSION.mediawiki
@@ -31,6 +31,8 @@ Fills the selected struct with:
 == Remarks ==
 This macro fills in an [[SDL_version]] structure with the version of the library you compiled against. This is determined by what header the compiler uses. Note that if you dynamically linked the library, you might have a slightly newer or older version at runtime. That version can be determined with [[SDL_GetVersion]]() which, unlike [[SDL_VERSION]](), is not a macro.  
 
+??? This macro gathers information from SDL_MAJOR_VERSION, SDL_MINOR_VERSION, AND SDL_PATCHLEVEL (#defines) and fills the structure [[SDL_version]] with that information. ???
+
 == Related Structures ==
 :[[SDL_version]]
 
