--- a/CategoryVersion.mediawiki
+++ b/CategoryVersion.mediawiki
@@ -13,7 +13,7 @@
 
 == Introduction ==
 
-These functions are used to collect or display information about the version of SDL that is currently being used by the program.
+These functions are used to collect or display information about the version of SDL that is currently being used by the program ^or that it was complied against^.
 
 : The version number consists of three segments (X.Y.Z)
 * X = '''Major Version''', which increments with massive changes, additions, and enhancements
@@ -21,14 +21,8 @@ These functions are used to collect or display information about the version of 
 * Z = '''Patchlevel''', which increments with fixes to the minor revision<br/>
  ''Example:'' The current version is 1.3.0
 
-Here are macros ''(<<Color2(green,Need to create a link to a resource that introduces macros.)>>)'' that are useful in dealing with version information.
-
-* [[SDL_VERSION]]
-* This macro gathers information from SDL_MAJOR_VERSION, SDL_MINOR_VERSION, AND SDL_PATCHLEVEL (#defines) and fills the structure [[SDL_version]] with that information.
-* [[SDL_version#Related_Minor_Macros|SDL_VERSIONNUM]]
-* A macro that converts version numbers into a numeric value.
-* [[SDL_version#Related_Minor_Macros|SDL_VERSION_ATLEAST]]
-* A macro that confirms whether a program was compiled with a version no older than the specified version.
+: The version number may also be reported as a 4-digit numeric value where the thousands place represents the major version, the hundreds place represents the minor version, and the tens and ones places represent the patchlevel (update version).  
+ ''Example:'' The current version is 1300
 
 == Functions ==
 
